--- a/manual.html
+++ b/manual.html
@@ -58,7 +58,7 @@
 		<p>Welcome to SimTIVA Manual</p>
 		<p>This is the user manual for simtiva.app, a web app to simulate target-controlled infusion (TCI).</p>
 		<p>Select a chapter to view</p>
-		<p><button onclick="getChapter(1)">1</button><button onclick="getChapter(2)">2</button><button onclick="getChapter(3)">3</button><button onclick="getChapter(4)">4</button><button onclick="getChapter(5)">5</button><button onclick="getChapter(6)">6</button><button onclick="loadlanguage('chinese',1)">chinese</button><button onclick="loadlanguage('french',1)">french</button><button onclick="loadlanguage('spanish',1)">spanish</button></p>
+		<p><button onclick="getChapter(1)">1</button><button onclick="getChapter(2)">2</button><button onclick="getChapter(3)">3</button><button onclick="getChapter(4)">4</button><button onclick="getChapter(5)">5</button><button onclick="getChapter(6)">6</button><button onclick="loadlanguage('ch',1)">chinese</button><button onclick="loadlanguage('fr',1)">french</button><button onclick="loadlanguage('es',1)">spanish</button></p>
 		<p>On this page <button onclick="populateOnThisPage();">UPDATE</button></p>
 
 	</div>
