--- a/manual.html
+++ b/manual.html
@@ -58,7 +58,7 @@
 		<p>Welcome to SimTIVA Manual</p>
 		<p>This is the user manual for simtiva.app, a web app to simulate target-controlled infusion (TCI).</p>
 		<p>Select a chapter to view</p>
-		<p><button onclick="getChapter(1)">1</button><button onclick="getChapter(2)">2</button><button onclick="getChapter(3)">3</button><button onclick="getChapter(4)">4</button><button onclick="getChapter(5)">5</button><button onclick="getChapter(6)">6</button><button onclick="loadlanguage('ch',1)">chinese</button><button onclick="loadlanguage('fr',1)">french</button><button onclick="loadlanguage('es',1)">spanish</button></p>
+		<p><button onclick="getChapter(1)">1</button><button onclick="getChapter(2)">2</button><button onclick="getChapter(3)">3</button><button onclick="getChapter(4)">4</button><button onclick="getChapter(5)">5</button><button onclick="getChapter(6)">6</button><button onclick="loadlanguage('ch',1)">chinese</button><button onclick="loadlanguage('fr',1)">french</button><button onclick="loadlanguage('es',1)">spanish</button><button onclick="displayLanguagePanel()">Select Lang</button></p>
 		<p>On this page <button onclick="populateOnThisPage();">UPDATE</button></p>
 
 	</div>
@@ -780,10 +780,26 @@ function getFooter() {
 	}
 }
 
+activeLanguageCode = 0;
+
 function displayLanguagePanel() {
-	languageHTML = `
-		
-	`
+	if (activeLanguage == "en") activeLanguageCode = 0;
+	if (activeLanguage == "fr") activeLanguageCode = 1;
+	if (activeLanguage == "es") activeLanguageCode = 2;
+	if (activeLanguage == "zh") activeLanguageCode = 3;
+	if (activeLanguage == "pt") activeLanguageCode = 4;
+	if (activeLanguage == "ja") activeLanguageCode = 5;
+	if (activeLanguage == "ru") activeLanguageCode = 6;
+	iterationArray = ["en","fr","es","zh","pt","ja","ru"];
+	El1 = document.createElement("div");
+	El1.innerHTML = "";
+	for (iteration = 0; iteration<languageMatrix.length; iteration++) {
+		El2 = document.createElement("div");
+		El2.innerHTML = "<div><span>" + languageMatrix[iteration][iteration] + "</span>&nbsp;(<span>" + languageMatrix[iteration][activeLanguageCode] + ")</span></div>";
+		El2.setAttribute("onclick","loadlanguage('" + iterationArray[iteration] + "'," + activeChapter + ");hidedialogmodal()");
+		El1.appendChild(El2);
+	}
+	displayDialog("Language",El1.innerHTML);
 }
 
 modal = undefined;
