--- a/manual.html
+++ b/manual.html
@@ -29,6 +29,7 @@
 	<div id="menu2">
 		<div class="menucontent">
 		</div>
+		<button onclick="displayLanguagePanel()">Select Lang</button>
 	</div>
 	<div class="hamburgermanual" id="hamburgermanual" onclick="togglemenu2();">
         <div class="bar1"></div>
