--- a/manual.html
+++ b/manual.html
@@ -764,7 +764,7 @@ function loadlanguage(lang,ind,omithistory) {
 	    	twttr.widgets.load();
 	  	});
 	} else {
-		getChapter(ind,omithistory,1);
+		getChapter(ind,0,1);
 		activeLanguage == "en";
 		activeLanguageCode == 0;
 	}
