--- a/manual.html
+++ b/manual.html
@@ -761,6 +761,7 @@ function loadlanguage(lang,ind,omithistory) {
 				history.pushState(state, "", url);
 			}
 			activateImageContainers();
+			updateChapterListings();
 	    	twttr.widgets.load();
 	  	});
 	} else {
